# Alarm_UnitTestHw_TEST

./: .cproject  .project  CMakeLists.txt  CMakePresets.json  README.md  Unity_TEST.ioc
Core/Src/: adc.c  adc.h  alarmSignal.c  alarmSignal.h  main.c  vbat.c  vbat.h
Core/test/: CMakeLists.txt  compiler_flags.cmake
Core/test/vbat/: CMakeLists.txt  mock_adc.c  output.c  unity_config.h  vbat_test.c  vbat_test_main.c  vbat_test_runner.c
cmake/: compiler_flags.cmake  gcc-arm-none-eabi.cmake  st-project.cmake  st-project_vbat_test.cmake
test/: CMakeLists.txt
test/vbat/: CMakeLists.txt  mock_adc.h  mock_alarmSignal.c  mock_alarmSignal.h  output.c  output.h  vbat_test_runner.c
test/vbat_hw/: CMakeLists.txt  unity_output_wrapper.c  vbat_test_hw_main.c
